// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`routes > model > roles > getModelRoles > 200 > ok 1`] = `
{
  "roles": [
    {
      "name": "Reviewer",
      "shortName": "reviewer",
    },
  ],
}
`;

exports[`routes > model > roles > getModelRoles > audit > expected call 1`] = `
[
  {
    "name": "Reviewer",
    "shortName": "reviewer",
  },
]
`;
